k8s/endpoints/endpoints-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: endpoints
spec:
  template:
    metadata:
      labels:
        app: endpoints
    spec:
      containers:
      - image: suhasedunet/endpoints:v4.0
        name: endpoints-container
        ports:
        - containerPort: 8080
