k8s/endpoints/endpoints-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: endpoints
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: endpoints
