k8s/endpoints/endpoints-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: endpoints
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: endpoints
          servicePort: 80
